# nido

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYED.md  justfile  package-lock.json  package.json  playwright.config.ts
contracts/factory/: Cargo.toml  build.rs
contracts/factory/src/: contract.rs
contracts/factory/test_snapshots/contract/test/: account_wasm_hash_caches_first_computation.1.json  account_wasm_hash_equals_uploaded_wasm_hash.1.json  create_account_and_create_account_v2_are_uniform_except_commitment.1.json  (+9 more)
contracts/smart-account/: Cargo.toml
contracts/smart-account/src/: contract.rs  lib.rs
contracts/zk-recovery/: Cargo.toml
contracts/zk-recovery/src/: controller.rs  hash.rs  lib.rs  merkle.rs  policy.rs  pool.rs  types.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
contracts/zk-verifier/test_snapshots/: verify_with_tampered_public_inputs_fails.1.json
contracts/zk-verifier/tests/: verifier_smoke.rs
contracts/zk-verifier/tests/fixtures/: proof  vk
crates/integration-tests/: Cargo.toml
crates/integration-tests/fixtures/zk/: manifest.json  proof  public_inputs
crates/integration-tests/src/: lib.rs  zk_fixture.rs
crates/integration-tests/test_snapshots/contract_verifier/: reject_wrong_key_on_chain.1.json  verify_webauthn_assertion_on_chain.1.json
crates/integration-tests/test_snapshots/default_rule_threshold/: policy_first_rotation_never_bricks.1.json  policyless_two_signer_default_rule_accepts_both_signatures.1.json  policyless_two_signer_default_rule_rejects_single_signature.1.json  threshold_policy_repair_restores_single_signature.1.json
crates/integration-tests/test_snapshots/guard_cost/: guard_fires_cost_with_real_pending.1.json  no_recovery_configured_baseline_cost.1.json
crates/integration-tests/test_snapshots/initiate_cost/: initiate_recovery_within_budget.1.json
crates/integration-tests/test_snapshots/multisig_recovery/: one_friend_signature_is_rejected.1.json  two_friend_signatures_pass_for_self_scope.1.json  two_friend_signatures_rejected_for_other_contract.1.json
crates/integration-tests/test_snapshots/name_registry/: register_name_via_smart_account.1.json  release_name_via_smart_account.1.json  resolve_unregistered_returns_none.1.json
crates/integration-tests/test_snapshots/name_registry_passkey_auth/: register_name_with_real_passkey_auth.1.json
crates/integration-tests/test_snapshots/petitions/: petitions_wasm_crud.1.json  sign_petition_with_real_passkey_auth.1.json
crates/integration-tests/test_snapshots/scoped_session_key/: session_key_authorizes_target_contract.1.json  session_key_rejected_after_revoke.1.json  session_key_rejected_after_valid_until.1.json  session_key_rejected_for_other_contract.1.json
crates/integration-tests/test_snapshots/smart_account_auth/: smart_account_check_auth_rejects_wrong_key.1.json  smart_account_check_auth_with_passkey.1.json
crates/integration-tests/test_snapshots/smart_account_scoping/: add_scoped_context_rule.1.json  expired_session_key_rejected.1.json  removed_session_key_rejected.1.json  session_key_authorizes_within_scope.1.json  session_key_rejected_outside_scope.1.json
crates/integration-tests/test_snapshots/smart_account_setup/: context_rules_count_is_one.1.json  default_context_rule_is_default_type.1.json  deploy_with_passkey_signer.1.json
crates/integration-tests/test_snapshots/spending_limit_policy/: over_limit_rejected.1.json  raised_limit_mid_window_keeps_spent_total.1.json  window_roll_allows_again.1.json  within_limit_transfer_authorizes.1.json
crates/integration-tests/test_snapshots/web_of_trust/: wasm_claim_flow_end_to_end.1.json  wasm_vouch_graph_roundtrip.1.json
crates/integration-tests/test_snapshots/zk_completion_spike/: zero_signer_policy_completion.1.json  zero_signer_policy_deny_blocks_completion.1.json
crates/integration-tests/test_snapshots/zk_fixture/: fixture_addresses_pin.1.json  fixture_revoke_proof_verifies.1.json
crates/integration-tests/test_snapshots/zk_recovery_completion/: completion_before_timelock_is_rejected.1.json  real_proof_completion_rotates_key_via_enforce.1.json  wrong_fn_name_is_rejected_by_enforce.1.json  wrong_new_signer_is_rejected_by_enforce.1.json
crates/integration-tests/test_snapshots/zk_recovery_e2e/: constructor_installed_rule_drives_real_proof_completion_and_guard.1.json  dummy_and_real_enrollment_are_indistinguishable_on_chain.1.json
crates/integration-tests/test_snapshots/zk_recovery_guard/: real_controller_pending_blocks_remove_signer.1.json
crates/integration-tests/test_snapshots/zk_recovery_lifecycle/: burn_nullifier_cannot_grief_a_different_accounts_public_nullifier.1.json  burn_nullifier_marks_spent_and_blocks_a_later_initiate.1.json  burn_nullifier_rejects_nullifier_reserved_by_another_account.1.json  burn_nullifier_requires_account_auth.1.json  cancel_cap_reached_is_rejected_before_proof_verification.1.json  cancel_cooldown_active_is_rejected_before_proof_verification.1.json  real_cancel_proof_clears_pending_and_releases_nullifier.1.json  real_proof_initiates_recovery_with_timelocked_pending.1.json  real_revoke_proof_burns_nullifier_and_blocks_later_initiate.1.json  reinitiating_with_a_live_pending_is_rejected.1.json  stale_pending_can_be_superseded_by_a_fresh_nonce_proof.1.json  timelock_below_floor_is_rejected.1.json  unknown_root_is_rejected.1.json
crates/integration-tests/test_snapshots/zk_recovery_migration/: enroll_zk_recovery_migrates_a_none_deployed_account.1.json  enroll_zk_recovery_twice_is_rejected.1.json  migrated_account_gets_full_recovery_and_guard.1.json
crates/integration-tests/tests/it/: contract_verifier.rs  drift.rs  guard_cost.rs  initiate_cost.rs  main.rs  multisig_recovery.rs  name_registry_passkey_auth.rs  petitions.rs  scoped_session_key.rs  smart_account_auth.rs  smart_account_scoping.rs  spending_limit_policy.rs  web_of_trust.rs  zk_completion_spike.rs  zk_fixture.rs  zk_recovery_completion.rs  zk_recovery_e2e.rs  zk_recovery_guard.rs  zk_recovery_lifecycle.rs  zk_recovery_migration.rs  zk_recovery_neuter.rs  zk_vectors.rs
tests/: README.md
(+372 files in other folders)
