[workspace]
resolver = "2"
members = [
    "crates/integration-tests",
    "crates/zk-bench",
    "contracts/*",
    # Nested under contracts/vendor/, so not matched by the "contracts/*" glob.
    "contracts/vendor/ultrahonk-soroban-verifier",
]
# examples/* are self-contained stellar-scaffold projects with their own
# workspace + toolchain; keep them out of this workspace's resolution.
# contracts/vendor itself has no Cargo.toml (only its nested crate does), so it
# must be excluded from the "contracts/*" glob or that glob fails to resolve.
exclude = ["examples", "contracts/vendor"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
base64 = "0.22"
soroban-sdk = "26.0.1"
# OZ stellar-contracts main @ 637c53a — tagged release v0.7.1 is still on
# soroban-sdk 25; the 26 bump landed on main after the tag.
stellar-accounts = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", rev = "637c53a8c4928fd0c71d330bd866f482c3454578", package = "stellar-accounts" }
stellar-registry = "0.0.10"
# soroban-sdk-tools: rev cbafae3 is the soroban-sdk 26 update.
soroban-sdk-tools = { git = "https://github.com/BlaineHeffron/soroban-sdk-tools", rev = "cbafae3439f01a4add2411c6162885edb30e7389" }

[profile.contract]
overflow-checks = true
inherits = "release"
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
