[package]
name = "nido-zk-recovery"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
# "hazmat-address" exposes `soroban_sdk::address_payload::AddressPayload`,
# the only public way to extract an `Address`'s raw 32-byte contract-id --
# required in production (not just tests) by `hash::split_addr`, since
# `acct_hi`/`acct_lo`/`ctrl_hi`/`ctrl_lo` bind that raw id into `auth_hash`.
soroban-sdk = { workspace = true, features = ["hazmat-address"] }
# Poseidon2 host hashing. Pinned construction proven native to Noir's
# `Poseidon2::hash` in M0 (crates/integration-tests/tests/it/zk_vectors.rs).
# pinned rev — Poseidon2 parity is byte-critical vs the circuit
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon", rev = "b4bf706b7d0d602f9389280d259c0fb9f19983bf" }
# Not used by this task's scaffold (hash.rs/types.rs only); added now
# because the OZ `Policy`/`ContextRule`/`Signer` types this crate needs for
# the M1 controller/policy modules (later tasks) live here.
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "hazmat-address"] }
