[package]
name = "nido-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
# Soroban
# "hazmat-address" is needed by the M1 zk_fixture address-pinning test
# (crates/integration-tests/tests/it/zk_fixture.rs): it exposes
# `Address::to_payload`/`AddressPayload::to_address`, the only public way to
# build/inspect an `Address`'s raw 32-byte contract-id, which is how the test
# proves `env.register_at` actually pins a contract at the exact id the ZK
# recovery proof's `auth_hash` binds.
soroban-sdk = { workspace = true, features = ["testutils", "hazmat-address"] }
stellar-accounts = { workspace = true }

# Crypto
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

# Encoding
base64 = { workspace = true }

[dev-dependencies]
# ZK: cross-language Poseidon2 hash parity (host vs Noir)
# pinned rev — Poseidon2 parity is byte-critical vs the circuit
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon", rev = "b4bf706b7d0d602f9389280d259c0fb9f19983bf" }
serde_json = "1"
# M1 Task 5's zk_recovery_lifecycle test exercises the real
# `ZkRecovery::initiate_recovery` contract entry point end-to-end.
nido-zk-recovery = { path = "../../contracts/zk-recovery" }
